* Ability to pass in an estimate of sigsq. This is important since this step may take a lot of time for datasets with a large number of features
* When creating partial dependence plots, there is now an option for proportion of data to use. The lower the proportion, the lower the resolution but the speedier the plot will generate.

version 1.2.0

* A major memory leak was fixed. bartMachine objects are also generated about 5% faster. Variable importance
  metrics are a tad slower as a result. Thanks to Matt Olson for pointing this out.

version 1.1.2

* there is now a seed argument which sets the seed in both R and Java (especially useful for debugging). Only works
  when bartMachine is built with one core
* sigsq convergence plot now easier to read
* plot_y_vs_y_hat plot now easier to read and print in black & white
* pd_plot now has interval shaded for reading ease
* cov_prior_vec bug fixed

version 1.1.1

* bartMachine now serializes models for transport in an image file (use serialize = TRUE option)
* bartMachine models are now cleaned up by R's garbage collection (destroy_bart_machine function is removed)
* rmse_by_num_trees no longer throws warnings
* k_fold_cv now has random splits and the y-hats and p-hats are returned
* jpackage is now used for initializing Java and thus "options(java.parameters = '...')" is used instead of set_bart_machine_memory which has been removed
* vignette and documentation are now revamped
* setting verbose flag set to FALSE eliminates Java output as well

version 1.0.4

* fixed bug in confusion table creation in the pathological case when only one class is observed and predicted
* fixed small bug off-by-one bug in get_sigsqs function (thanks to Jeff Moser)
* Added Java source files to R package build. Declared authors of JARs which this library depends upon.

version 1.0.3

* fixed bug in variable selection via cv where it used to crash if one variable was selected